# img2gif

./: .gitignore  README.rst  pyproject.toml  scratchpad.ipynb
gif/: __init__.py  display.py  image.py
tests/: conftest.py  test_gif.py  test_pillow.py  test_resize.py  test_wand.py  testutils.py  utils.py
